feat: add AI workflows and update frontend
- Add GitHub Actions workflows for AI-powered checks
- Update i18n translations (en/uk)
- Improve Admin/UsersManagement page
- Enhance Cases/Clients pages functionality
- Update Kanban board for tasks
- Refactor API services
- Add new documentation

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -602,6 +602,99 @@
   "templateDeactivated": "Template deactivated",
   "errorTogglingTemplate": "Error toggling template status",
   "copy": "copy",
+    "usersManagement": "Users Management",
+  "addUser": "Add User",
+  "userCreated": "User created successfully",
+  "userUpdated": "User updated successfully", 
+  "userDeleted": "User deleted successfully",
+  "userDeactivated": "User deactivated",
+  "userActivated": "User activated",
+  "errorFetchingUsers": "Error fetching users",
+  "errorCreatingUser": "Error creating user",
+  "errorUpdatingUser": "Error updating user", 
+  "errorDeletingUser": "Error deleting user",
+  "confirmDeleteUser": "Delete user?",
+  "deleteUserWarning": "This action cannot be undone. Are you sure?",
+  "lastLogin": "Last Login",
+  "active": "Active",
+  "inactive": "Inactive",
+  "rolesAndPermissions": "Roles & Permissions",
+  "addRole": "Add Role",
+  "editRole": "Edit Role", 
+  "roleCreated": "Role created successfully",
+  "roleUpdated": "Role updated successfully",
+  "roleDeleted": "Role deleted successfully",
+  "errorCreatingRole": "Error creating role",
+  "errorUpdatingRole": "Error updating role",
+  "errorDeletingRole": "Error deleting role",
+  "confirmDeleteRole": "Delete role?",
+  "deleteRoleWarning": "This action cannot be undone. Are you sure?",
+  "roleName": "Role Name",
+  "roleNameRequired": "Role name is required",
+  "enterRoleName": "Enter role name",
+  "enterRoleDescription": "Enter role description",
+  "selectPermissions": "Select permissions",
+  "system": "System",
+  "users": "users",
+  "systemSettings": "System Settings",
+  "generalSettings": "General Settings",
+  "notificationSettings": "Notification Settings", 
+  "securitySettings": "Security Settings",
+  "backupSettings": "Backup Settings",
+  "saveSettings": "Save Settings",
+  "settingsSaved": "Settings saved successfully",
+  "settingsReset": "Settings reset to default",
+  "errorFetchingSettings": "Error fetching settings",
+  "errorSavingSettings": "Error saving settings",
+  "companyName": "Company Name",
+  "companyNameRequired": "Company name is required",
+  "enterCompanyName": "Enter company name",
+  "timezone": "Timezone",
+  "language": "Language", 
+  "currency": "Currency",
+  "emailNotifications": "Email Notifications",
+  "pushNotifications": "Push Notifications",
+  "notificationTypes": "Notification Types",
+  "caseUpdates": "Case Updates",
+  "hearingReminders": "Hearing Reminders",
+  "invoiceDue": "Invoice Due Dates",
+  "twoFactorAuth": "Two-Factor Authentication",
+  "sessionTimeout": "Session Timeout",
+  "loginAttempts": "Login Attempts",
+  "passwordPolicy": "Password Policy",
+  "weak": "Weak",
+  "medium": "Medium",
+  "strong": "Strong",
+  "minutes": "minutes", 
+  "days": "days",
+  "autoBackup": "Auto Backup",
+  "backupFrequency": "Backup Frequency",
+  "backupRetention": "Backup Retention",
+  "lastBackup": "Last Backup",
+  "backupNow": "Backup Now",
+  "backupCreated": "Backup created successfully",
+  "errorCreatingBackup": "Error creating backup",
+  "hourly": "Hourly",
+  "daily": "Daily",
+  "weekly": "Weekly", 
+  "monthly": "Monthly",
+  "systemInfo": "System Information",
+  "systemStatus": "System Status",
+  "version": "Version",
+  "lastUpdate": "Last Update",
+  "databaseSize": "Database Size",
+  "activeUsers": "Active Users",
+  "serverTime": "Server Time",
+  "database": "Database",
+  "api": "API",
+  "storage": "Storage",
+  "memory": "Memory",
+  "online": "Online",
+  "quickActions": "Quick Actions",
+  "clearCache": "Clear Cache",
+  "optimizeDatabase": "Optimize Database",
+  "securityScan": "Security Scan",
+  "reset": "Reset"
   "pageTitle": {
     "dashboard": "Dashboard - Lawyer CRM",
     "cases": "Cases - Lawyer CRM",
