--- a/frontend/public/locales/uk/translation.json
+++ b/frontend/public/locales/uk/translation.json
@@ -602,6 +602,142 @@
   "templateDeactivated": "Шаблон деактивовано",
   "errorTogglingTemplate": "Помилка зміни статусу шаблону",
   "copy": "копія",
+    "usersManagement": "Управління користувачами",
+  "addUser": "Додати користувача",
+  "userCreated": "Користувача успішно створено",
+  "userUpdated": "Користувача успішно оновлено",
+  "userDeleted": "Користувача успішно видалено",
+  "userDeactivated": "Користувача деактивовано",
+  "userActivated": "Користувача активовано",
+  "errorFetchingUsers": "Помилка отримання списку користувачів",
+  "errorCreatingUser": "Помилка створення користувача",
+  "errorUpdatingUser": "Помилка оновлення користувача",
+  "errorDeletingUser": "Помилка видалення користувача",
+  "confirmDeleteUser": "Видалити користувача?",
+  "deleteUserWarning": "Ця дія незворотна. Ви впевнені?",
+  "lastLogin": "Останній вхід",
+  "active": "Активний",
+  "inactive": "Неактивний",
+
+  "rolesAndPermissions": "Ролі та дозволи",
+  "addRole": "Додати роль",
+  "editRole": "Редагувати роль",
+  "roleCreated": "Роль успішно створено",
+  "roleUpdated": "Роль успішно оновлено",
+  "roleDeleted": "Роль успішно видалено",
+  "errorCreatingRole": "Помилка створення ролі",
+  "errorUpdatingRole": "Помилка оновлення ролі",
+  "errorDeletingRole": "Помилка видалення ролі",
+  "confirmDeleteRole": "Видалити роль?",
+  "deleteRoleWarning": "Ця дія незворотна. Ви впевнені?",
+  "roleName": "Назва ролі",
+  "roleNameRequired": "Назва ролі обов'язкова",
+  "enterRoleName": "Введіть назву ролі",
+  "enterRoleDescription": "Введіть опис ролі",
+  "selectPermissions": "Виберіть дозволи",
+  "system": "Системна",
+  "users": "користувачів",
+
+  "systemSettings": "Системні налаштування",
+  "generalSettings": "Загальні налаштування",
+  "notificationSettings": "Налаштування сповіщень",
+  "securitySettings": "Налаштування безпеки",
+  "backupSettings": "Резервне копіювання",
+  "saveSettings": "Зберегти налаштування",
+  "settingsSaved": "Налаштування успішно збережено",
+  "settingsReset": "Налаштування скинуто до стандартних",
+  "errorFetchingSettings": "Помилка завантаження налаштувань",
+  "errorSavingSettings": "Помилка збереження налаштувань",
+  "companyName": "Назва компанії",
+  "companyNameRequired": "Назва компанії обов'язкова",
+  "enterCompanyName": "Введіть назву компанії",
+  "timezone": "Часовий пояс",
+  "language": "Мова",
+  "currency": "Валюта",
+  "emailNotifications": "Email сповіщення",
+  "pushNotifications": "Push сповіщення",
+  "notificationTypes": "Типи сповіщень",
+  "caseUpdates": "Оновлення справ",
+  "hearingReminders": "Нагадування про засідання",
+  "invoiceDue": "Термін оплати рахунків",
+  "twoFactorAuth": "Двофакторна автентифікація",
+  "sessionTimeout": "Таймаут сесії",
+  "loginAttempts": "Спроби входу",
+  "passwordPolicy": "Політика паролів",
+  "weak": "Слабка",
+  "medium": "Середня",
+  "strong": "Сильна",
+  "minutes": "хвилин",
+  "days": "днів",
+  "autoBackup": "Автоматичне резервне копіювання",
+  "backupFrequency": "Частота бекапів",
+  "backupRetention": "Зберігання бекапів",
+  "lastBackup": "Останній бекап",
+  "backupNow": "Зробити бекап зараз",
+  "backupCreated": "Бекап успішно створено",
+  "errorCreatingBackup": "Помилка створення бекапу",
+  "hourly": "Щогодини",
+  "daily": "Щодня",
+  "weekly": "Щотижня",
+  "monthly": "Щомісяця",
+  "systemInfo": "Інформація про систему",
+  "systemStatus": "Статус системи",
+  "version": "Версія",
+  "lastUpdate": "Останнє оновлення",
+  "databaseSize": "Розмір бази даних",
+  "activeUsers": "Активні користувачі",
+  "serverTime": "Час сервера",
+  "database": "База даних",
+  "api": "API",
+  "storage": "Сховище",
+  "memory": "Пам'ять",
+  "online": "Онлайн",
+  "quickActions": "Швидкі дії",
+  "clearCache": "Очистити кеш",
+  "optimizeDatabase": "Оптимізувати базу даних",
+  "securityScan": "Сканування безпеки",
+  "reset": "Скинути",
+
+  "noEmails": "Немає email",
+  "noPhones": "Немає телефонів",
+  "pleaseFillRequiredFields": "Будь ласка, заповніть обов'язкові поля",
+  "update": "Оновити",
+  "showing": "Показано",
+  "of": "з",
+  "items": "елементів",
+  "selectDate": "Виберіть дату",
+  "demoMode": "Демо-режим",
+  "errorFetchingData": "Помилка завантаження даних"
+    "permissions": "Дозволи",
+  "permissionName": "Назва дозволу",
+  "category": "Категорія",
+  "description": "Опис",
+  "descriptionRequired": "Опис обов'язковий",
+  "yes": "Так",
+  "no": "Ні",
+  "create": "Створити",
+  "cancel": "Скасувати",
+  "edit": "Редагувати",
+  "delete": "Видалити",
+  "view": "Переглянути",
+  "type": "Тип",
+  "email": "Email",
+  "phone": "Телефон",
+  "address": "Адреса",
+  "status": "Статус",
+  "actions": "Дії",
+  "person": "Фізична особа",
+  "company": "Юридична особа",
+  "unknown": "Невідомо",
+  "pending": "Очікує",
+  "verified": "Перевірено",
+  "rejected": "Відхилено",
+  "admin": "Адміністратор",
+  "lawyer": "Адвокат",
+  "assistant": "Помічник",
+  "paralegal": "Юрист",
+  "accountant": "Бухгалтер",
+  "viewer": "Переглядач"
   "pageTitle": {
     "dashboard": "Головна панель - Lawyer CRM",
     "cases": "Справи - Lawyer CRM",
